# LuauInterop

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Directory.build.props  Luau.NET.slnx  README.md  glue.c  glue.cpp  index.html  index.json  luau.def  manifest.json  toc.html  toc.json  xrefmap.yml
.github/: FUNDING.yml
.github/workflows/: build-native.yml  ci.yml  docs.yml  release-please.yml
api/: LuauInterop.Ast.LuauComment.html  LuauInterop.Ast.LuauParseError.html  LuauInterop.Ast.LuauParser.html  LuauInterop.Ast.Nodes.AstArgumentName.html  LuauInterop.Ast.Nodes.AstAttr.html  LuauInterop.Ast.Nodes.AstLocal.html  LuauInterop.Ast.Nodes.AstNode.html  LuauInterop.Ast.Nodes.Expressions.AstExpr.html  LuauInterop.Ast.Nodes.Expressions.AstExprBinary.html  LuauInterop.Ast.Nodes.Expressions.AstExprCall.html  LuauInterop.Ast.Nodes.Expressions.AstExprConstantBool.html  LuauInterop.Ast.Nodes.Expressions.AstExprConstantInteger.html  LuauInterop.Ast.Nodes.Expressions.AstExprConstantNil.html  LuauInterop.Ast.Nodes.Expressions.AstExprConstantNumber.html  LuauInterop.Ast.Nodes.Expressions.AstExprConstantString.html  LuauInterop.Ast.Nodes.Expressions.AstExprError.html  LuauInterop.Ast.Nodes.Expressions.AstExprFunction.html  LuauInterop.Ast.Nodes.Expressions.AstExprGlobal.html  LuauInterop.Ast.Nodes.Expressions.AstExprGroup.html  LuauInterop.Ast.Nodes.Expressions.AstExprIfElse.html  LuauInterop.Ast.Nodes.Expressions.AstExprIndexExpr.html  LuauInterop.Ast.Nodes.Expressions.AstExprIndexName.html  LuauInterop.Ast.Nodes.Expressions.AstExprInterpString.html  LuauInterop.Ast.Nodes.Expressions.AstExprLocal.html  LuauInterop.Ast.Nodes.Expressions.AstExprTable.html  LuauInterop.Ast.Nodes.Expressions.AstExprTableItem.html  LuauInterop.Ast.Nodes.Expressions.AstExprTypeAssertion.html  LuauInterop.Ast.Nodes.Expressions.AstExprUnary.html  LuauInterop.Ast.Nodes.Expressions.AstExprVarargs.html  LuauInterop.Ast.Nodes.Expressions.html  LuauInterop.Ast.Nodes.Location.html  LuauInterop.Ast.Nodes.Position.html  LuauInterop.Ast.Nodes.Statements.AstDeclaredClassProp.html  LuauInterop.Ast.Nodes.Statements.AstStat.html  LuauInterop.Ast.Nodes.Statements.AstStatAssign.html  LuauInterop.Ast.Nodes.Statements.AstStatBlock.html  LuauInterop.Ast.Nodes.Statements.AstStatBreak.html  LuauInterop.Ast.Nodes.Statements.AstStatCompoundAssign.html  LuauInterop.Ast.Nodes.Statements.AstStatContinue.html  LuauInterop.Ast.Nodes.Statements.AstStatDeclareClass.html  (+63 more)
docs/: callbacks.html  disposables.html  index.md  installation.html  parsing.html  quickstart.html  sandboxing.html  toc.html  toc.json  toc.yml
docs/api/: .manifest  LuauInterop.Ast.LuauComment.yml  LuauInterop.Ast.LuauParseError.yml  LuauInterop.Ast.LuauParser.yml  LuauInterop.Ast.Nodes.AstArgumentName.yml  LuauInterop.Ast.Nodes.AstAttr.yml  LuauInterop.Ast.Nodes.AstLocal.yml  LuauInterop.Ast.Nodes.AstNode.yml  LuauInterop.Ast.Nodes.Expressions.AstExpr.yml  LuauInterop.Ast.Nodes.Expressions.AstExprBinary.yml  LuauInterop.Ast.Nodes.Expressions.AstExprCall.yml  LuauInterop.Ast.Nodes.Expressions.AstExprConstantBool.yml  LuauInterop.Ast.Nodes.Expressions.AstExprConstantInteger.yml  LuauInterop.Ast.Nodes.Expressions.AstExprConstantNil.yml  LuauInterop.Ast.Nodes.Expressions.AstExprConstantNumber.yml  (+99 more)
scripts/: build-native.bat  build-native.sh  build-win-x64.ps1
(+133 files in other folders)
